# ACE-Step-ONNX-Rust

./: .gitignore  Cargo.toml  plan.md
docs/: dll_api.md  io_contract.md  onnx_quantization.md  parity_ops.md
examples/ffi/: run_regression.ps1
examples/ffi/csharp/: Program.cs
examples/ffi/python/: demo.py  onnxruntime_dll_demo.py  regression.py
include/: acestep_runtime.h
runtime_py_ort/: __init__.py  audio_parity.py  case_schema.py  cli.py  constrained_decoding.py  parity.py  pipeline_core.py  pipeline_embed.py  pipeline_lm.py  scheduler.py  session_manager.py
runtime_rust_dll/: Cargo.toml
runtime_rust_dll/src/: lib.rs
runtime_rust_ort/: Cargo.toml
runtime_rust_ort/src/: case.rs  main.rs  metrics.rs  scheduler.rs
src/: case.rs  main.rs
src/audio/: metrics.rs  mod.rs
src/io/: mod.rs  npz.rs
src/ort/: session.rs
src/parity/: metrics.rs  mod.rs
src/pipeline/: core.rs  lm.rs  mod.rs
src/scheduler/: mod.rs
tools/baseline/: dump_baseline.py
tools/onnx_export/: __init__.py  common.py  export_all.py  export_core.py  export_lm.py  export_qwen_embedding.py
tools/onnx_opt/: fill_manifest_metrics.py  quantize_all.py
tools/parity/: case_thresholds.json  compare.py  dit_layer_diff.py  dit_step_diff.py  dit_sublayer_diff.py  lm_step_diff.py  run_3way_all_cases.py  run_lm_step_diff_all.py  run_lm_variant_3way.py
