[package]
name = "ACE-Step-ONNX-Rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ndarray = "0.17"
ndarray-npy = "0.10"
ort = { version = "2.0.0-rc.11", features = ["ndarray", "download-binaries"] }
hound = "3"
tokenizers = { version = "0.22", default-features = false, features = ["fancy-regex"] }
regex = "1"
