[package]
name = "runtime_rust_dll"
version = "0.1.0"
edition = "2021"

[lib]
name = "acestep_runtime"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
once_cell = "1"
tokenizers = { version = "0.22", default-features = false, features = ["fancy-regex"] }
